store model on model regestry

--- a/stacks/prepare_data/prepare_data.ipynb
+++ b/stacks/prepare_data/prepare_data.ipynb
@@ -224,7 +224,8 @@
     "    packages_to_install=[\n",
     "        config.packages.SKLEARN,\n",
     "        config.packages.PANDAS,\n",
-    "        config.packages.DB_TYPES\n",
+    "        config.packages.DB_TYPES,\n",
+    "        config.packages.AIPLATFORM\n",
     "    ]\n",
     ")\n",
     "def train_model(\n",
@@ -233,8 +234,10 @@
     "    model: Output[Model]\n",
     "):\n",
     "    import pickle as pkl\n",
+    "    from google.cloud import aiplatform\n",
     "    from sklearn.linear_model import LogisticRegression\n",
     "    from sklearn.metrics import f1_score, accuracy_score\n",
+    "    \n",
     "    \n",
     "    with open(train_data.path, \"rb\") as f:\n",
     "        data = pkl.load(f)\n",
@@ -261,8 +264,14 @@
     "\n",
     "    with open(model.path, \"wb\") as f:\n",
     "        pkl.dump(lr, f)\n",
-    "        \n",
-    "    model.metadata[\"metrics\"] = metrics"
+    "    \n",
+    "    model_regestry = aiplatform.Model.upload(\n",
+    "        display_name=\"titanic_survivors\",\n",
+    "        artifact_uri=model.path,\n",
+    "        serving_container_image_uri=\"southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model:latest\"\n",
+    "    )\n",
+    "\n",
+    "    model_regestry.add_metrics(metrics)"
    ]
   },
   {
