--- a/stacks/prepare_data/prepare_data.ipynb
+++ b/stacks/prepare_data/prepare_data.ipynb
@@ -224,17 +224,16 @@
     "    packages_to_install=[\n",
     "        config.packages.SKLEARN,\n",
     "        config.packages.PANDAS,\n",
-    "        config.packages.DB_TYPES,\n",
-    "        config.packages.AIPLATFORM\n",
+    "        config.packages.DB_TYPES\n",
     "    ]\n",
     ")\n",
     "def train_model(\n",
     "    train_data: Input[Artifact],\n",
     "    test_data: Input[Artifact],\n",
-    "    model: Output[Model]\n",
+    "    model: Output[Model],\n",
+    "    metrics: Output[Artifact]\n",
     "):\n",
     "    import pickle as pkl\n",
-    "    from google.cloud import aiplatform\n",
     "    from sklearn.linear_model import LogisticRegression\n",
     "    from sklearn.metrics import f1_score, accuracy_score\n",
     "    \n",
@@ -265,11 +264,45 @@
     "    with open(model.path, \"wb\") as f:\n",
     "        pkl.dump(lr, f)\n",
     "    \n",
+    "    with open(metrics.path, \"wb\") as f:\n",
+    "        pkl.dump(metrics, f)\n",
+    "        \n",
     "    model_regestry = aiplatform.Model.upload(\n",
     "        display_name=\"titanic_survivors\",\n",
     "        artifact_uri=model.path,\n",
     "        serving_container_image_uri=\"southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model:latest\"\n",
     "    )\n",
+    "\n",
+    "    model_regestry.add_metrics(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@component(\n",
+    "    base_image=\"python:3.11-slim\",\n",
+    "    packages_to_install=[\n",
+    "        config.packages.AIPLATFORM\n",
+    "    ]\n",
+    ")\n",
+    "def upload_model_regestry(\n",
+    "    model: Input[Model],\n",
+    "    metrics: Input[Artifact]\n",
+    "):\n",
+    "    import pickle as pkl\n",
+    "    from google.cloud import aiplatform\n",
+    "\n",
+    "    model_regestry = aiplatform.Model.upload(\n",
+    "        display_name=\"titanic_survivors\",\n",
+    "        artifact_uri=model.uri,\n",
+    "        serving_container_image_uri=\"southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model:latest\"\n",
+    "    )\n",
+    "\n",
+    "    with open(metrics.path, \"rb\") as f:\n",
+    "        metrics = pkl.load(f)\n",
     "\n",
     "    model_regestry.add_metrics(metrics)"
    ]
@@ -308,9 +341,14 @@
     "        input_data=scale_data_task.outputs[\"dataset_artifact\"]\n",
     "        )\n",
     "    \n",
-    "    train_model(\n",
+    "    train_model_task = train_model(\n",
     "        train_data=split_train_test_task.outputs[\"dataset_train\"],\n",
     "        test_data=split_train_test_task.outputs[\"dataset_test\"]\n",
+    "    )\n",
+    "\n",
+    "    upload_model_regestry_task = upload_model_regestry(\n",
+    "        model=train_model_task.outputs[\"model\"],\n",
+    "        metrics=train_model_task.outputs[\"metrics\"]\n",
     "    )"
    ]
   },
