upload artifact path

--- a/stacks/prepare_data/prepare_data.ipynb
+++ b/stacks/prepare_data/prepare_data.ipynb
@@ -231,7 +231,7 @@
     "    train_data: Input[Artifact],\n",
     "    test_data: Input[Artifact],\n",
     "    model: Output[Model],\n",
-    "    metrics: Output[Artifact]\n",
+    "    metrics_artifact: Output[Artifact]\n",
     "):\n",
     "    import pickle as pkl\n",
     "    from sklearn.linear_model import LogisticRegression\n",
@@ -264,16 +264,8 @@
     "    with open(model.path, \"wb\") as f:\n",
     "        pkl.dump(lr, f)\n",
     "    \n",
-    "    with open(metrics.path, \"wb\") as f:\n",
-    "        pkl.dump(metrics, f)\n",
-    "        \n",
-    "    model_regestry = aiplatform.Model.upload(\n",
-    "        display_name=\"titanic_survivors\",\n",
-    "        artifact_uri=model.path,\n",
-    "        serving_container_image_uri=\"southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model:latest\"\n",
-    "    )\n",
-    "\n",
-    "    model_regestry.add_metrics(metrics)"
+    "    with open(metrics_artifact.path, \"wb\") as f:\n",
+    "        pkl.dump(metrics, f)"
    ]
   },
   {
