update metric artifact name

--- a/stacks/prepare_data/prepare_data.ipynb
+++ b/stacks/prepare_data/prepare_data.ipynb
@@ -282,7 +282,7 @@
     ")\n",
     "def upload_model_regestry(\n",
     "    model: Input[Model],\n",
-    "    metrics: Input[Artifact]\n",
+    "    metrics_artifact: Input[Artifact]\n",
     "):\n",
     "    import pickle as pkl\n",
     "    from google.cloud import aiplatform\n",
@@ -293,7 +293,7 @@
     "        serving_container_image_uri=\"southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model:latest\"\n",
     "    )\n",
     "\n",
-    "    with open(metrics.path, \"rb\") as f:\n",
+    "    with open(metrics_artifact.path, \"rb\") as f:\n",
     "        metrics = pkl.load(f)\n",
     "\n",
     "    model_regestry.add_metrics(metrics)"
