update model experiment naming to curr experiment date_time

--- a/stacks/titanic_model/pipeline.ipynb
+++ b/stacks/titanic_model/pipeline.ipynb
@@ -185,6 +185,9 @@
     "    \n",
     "    # check if the model exists\n",
     "    \n",
+    "    model_list = aiplatform.Model.list(\n",
+    "        filter=f\"display_name={display_name}\"\n",
+    "    )\n",
     "    \n",
     "    # create training job\n",
     "    \n",
@@ -198,8 +201,6 @@
     "        display_name=display_name+ \"_training\",\n",
     "        container_uri=train_image_uri,\n",
     "        model_serving_container_image_uri= model_serving_container_image_uri,\n",
-    "        model_serving_container_health_route= model_serving_container_health_route,\n",
-    "        model_serving_container_predict_route= model_serving_container_predict_route,\n",
     "        staging_bucket=staging_bucket\n",
     "    )\n",
     "    \n",
