--- a/stacks/titanic_model/pipeline.ipynb
+++ b/stacks/titanic_model/pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,8 @@
     "        SELECT *\n",
     "        FROM `{project_id}.{dataset_id}.{table_id}`\n",
     "        \"\"\"\n",
+    "        \n",
+    "    \n",
     "    logger.info(f'Query: {query}')\n",
     "    data = client.query(query).to_dataframe()\n",
     "\n",
@@ -239,9 +241,10 @@
     "    logger.info(f\"Model list: {model_list}\")\n",
     "    \n",
     "    if len(model_list) > 0:\n",
+    "        logger.info(f\"Model found: {model}\")\n",
     "        model = model_list[0]\n",
     "        parent_model = model.resource_name\n",
-    "        logger.info(f\"Model found: {model}\")\n",
+    "        \n",
     "    else:\n",
     "        parent_model = ''\n",
     "        logger.info(f\"Model not found\")\n",
@@ -364,7 +367,6 @@
     "    table_id: str,\n",
     "    dataset_display_name: str,\n",
     "    train_model_name: str,\n",
-    "    train_job_name: str,\n",
     "    train_image_uri: str,\n",
     "    staging_bucket: str,\n",
     "    model_serving_container_image_uri: str,\n",
@@ -392,7 +394,7 @@
     "    train_model_task = train_model(\n",
     "        parent_model=fetch_model_task.output,\n",
     "        dataset_name=fetch_dataset_task.output,\n",
-    "        training_job_name=train_job_name,\n",
+    "        training_job_name=train_model_name,\n",
     "        train_image_uri=train_image_uri,\n",
     "        staging_bucket=staging_bucket,\n",
     "        model_serving_container_image_uri=model_serving_container_image_uri\n",
@@ -444,7 +446,6 @@
     "        'table_id': config.parameters.table_id,\n",
     "        'dataset_display_name': config.parameters.dataset_display_name,\n",
     "        'train_model_name': config.parameters.train_model_name,\n",
-    "        'train_job_name': config.parameters.train_job_name,\n",
     "        'train_image_uri': config.parameters.train_image_uri,\n",
     "        'staging_bucket': config.parameters.staging_bucket,\n",
     "        'model_serving_container_image_uri': config.parameters.model_serving_container_image_uri,\n",
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,12 +463,15 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018133927\n",
+      "PipelineJob created. Resource name: projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018205540\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018133927')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018205540')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/titanic-pipeline-20241018133927?project=470842673491\n",
-      "PipelineJob run completed. Resource name: projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018133927\n"
+      "https://console.cloud.google.com/vertex-ai/locations/us-central1/pipelines/runs/titanic-pipeline-20241018205540?project=470842673491\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018205540 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/us-central1/pipelineJobs/titanic-pipeline-20241018205540 current state:\n",
+      "3\n"
      ]
     }
    ],
